--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "connect-session-sequelize": "^6.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.1",
+    "google-maps-react": "^2.0.2",
     "history": "^4.9.0",
     "mapbox-gl": "^1.5.0",
     "morgan": "^1.9.1",
