--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "prettify": "prettier --write \"**/*.{js,jsx,json,css,scss,md}\"",
     "postinstall": "touch secrets.js",
     "seed": "node script/seed.js",
+    "generate-seed-data": "node script/generateDummyData.js > script/dummyData.js",
+    "fetch-travel-time": "NODE_ENV='development' node script/fetchTravelTime.js",
     "start": "node server",
     "start-dev": "NODE_ENV='development' npm run build-client-watch & NODE_ENV='development' npm run start-server",
     "start-server": "nodemon server -e html,js,scss --ignore public --ignore client",
@@ -47,6 +49,7 @@
     "connect-session-sequelize": "^6.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.1",
+    "google-distance": "^1.0.1",
     "google-maps-react": "^2.0.2",
     "history": "^4.9.0",
     "mapbox-gl": "^1.5.0",
